# C_qir

./: CMakeLists.txt  CToQIRPass.cpp  README.md  sample.c  sample.ll  sample2.c  sample_qir.ll
